# qollective

./: .gitignore  LICENSE  README.md
software/: Cargo.toml  README.md  build.rs
software/.cargo/: config.toml
software/benches/: openapi_benchmarks.rs
software/docs/: openapi-examples.md
software/examples/nats_external/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
software/examples/nats_external/src/: main.rs
software/examples/nats_internal/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
software/examples/nats_internal/src/: main.rs
software/examples/qollective_a2a_q_console_challenge/: Cargo.toml  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  TLS_ISSUES_REPORT.md  TLS_SETUP_README.md  TLS_TROUBLESHOOTING_GUIDE.md  agent_register_deregister.mermaid  config.toml
software/examples/qollective_a2a_q_console_challenge/src/: constants.rs  enterprise.rs  enterprise_certificate_validator.rs  enterprise_registry_manager.rs  lib.rs  main.rs  startrek_agent.rs  startrek_types.rs  tls_analysis.rs
software/examples/qollective_mcp_websocket_holodeck/: .env.example  ARCHITECTURE.md  Cargo.toml  TEST_PLAN.md  USE_CASES.md  build.sh  data_flow.mermaid  dev.sh  holodeck_architecture.mermaid  mcp_protocol_layers.mermaid  port_allocation.mermaid  run_e2e_tests.sh  test.sh  test_rmcp.rs
software/examples/qollective_mcp_websocket_holodeck/holodeck-character/: Cargo.toml  config.toml
software/examples/qollective_mcp_websocket_holodeck/holodeck-coordinator/: Cargo.toml  config.toml
software/examples/qollective_mcp_websocket_holodeck/holodeck-designer/: Cargo.toml  build.rs  config.toml
software/examples/qollective_taletrail_content_generator/: .env.example  .gitignore  CONFIGURATION.md  Cargo.toml  README.md  build.sh  docker-compose.yml  nats-server.conf  regenerate-types.sh  setup-security.sh  start-nats.sh  test.sh  test_integration.sh
software/examples/qollective_wasm_space_exploration/: Cargo.toml  README.md  package-lock.json  package.json  test_browser_websocket.html
software/generator/: Cargo.toml  README.md
software/generator/src/: cli.rs  lib.rs  main.rs
software/generator/src/codegen/: direct_typify.rs  mod.rs  rust.rs  (+1 more)
software/generator/tests/: cli_integration_tests.rs  code_generation_integration_tests.rs  integration_schema_tests.rs  meta_validation_tests.rs  mod.rs  rest_protocol_metadata_schema_tests.rs  schema_test_runner.rs  schema_validation_tests.rs  service_config_validation_tests.rs  simple_jsonschema_test.rs  validation_error_handling_tests.rs
software/proto/: qollective.proto
software/schemas/: README.md  SCHEMA.md
software/schemas/core/: config.json  envelope.json  service-config.json
software/schemas/examples/: minimal-service.json
software/src/: constants.rs  crypto.rs  error.rs  lib.rs  monitoring.rs  openapi.rs
software/src/client/: a2a.rs  common.rs  grpc.rs  mcp.rs  middleware.rs  mod.rs  nats.rs  rest.rs  websocket.rs
software/src/config/: a2a.rs  grpc.rs  loader.rs  masking.rs  mcp.rs  meta.rs  mod.rs  nats.rs  presets.rs  rest.rs  tls.rs  transport.rs  validator.rs  wasm.rs  websocket.rs
software/src/envelope/: builder.rs  context.rs  jwt_extractor.rs  meta.rs  meta.rs.bak  middleware.rs  mod.rs  nats.rs  nats_codec.rs  tenant_middleware.rs  unified_tenant_extraction.rs
software/src/monitoring/: middleware_integration.rs
software/src/security/: audit.rs  config.rs  expiration.rs  jwt.rs  mod.rs  oauth.rs  scopes.rs  storage.rs  transmission.rs
software/src/server/: a2a.rs  common.rs  grpc.rs  mcp.rs  mcp_jsonrpc.rs  middleware.rs  mod.rs  nats.rs  rest.rs  websocket.rs
software/src/tenant/: error_handler.rs  extraction.rs  jwt.rs  mod.rs
software/src/traits/: catalog.rs  handlers.rs  mod.rs  receivers.rs  senders.rs  tests.rs
software/src/transport/: a2a.rs  grpc.rs  jsonrpc.rs  mcp.rs  mock.rs  mod.rs  nats.rs  rest.rs  websocket.rs
software/src/types/: a2a.rs  mcp.rs  mod.rs
software/src/wasm/: client.rs  crypto.rs  error_translator.rs  js_types.rs  jsonrpc.rs  mcp_adapter.rs  mod.rs  rest.rs  websocket.rs
software/test_fixtures/: test_cert.pem  test_key.pem
software/tests/: a2a_client_server_roundtrip_test.rs  custom_http_status_integration_tests.rs  debug_get_roundtrip.rs  debug_options_http.rs  debug_options_query_params.rs  debug_raw_options.rs  debug_rest_client_get.rs  debug_rest_client_transport_check.rs  debug_roundtrip_comparison.rs  debug_url_construction.rs  debug_websocket_connection.rs  debug_websocket_path.rs  documentation_examples_tests.rs  enhanced_metadata_architecture_tests.rs  enhanced_qollective_error_openapi_tests.rs  envelope_http_status_tests.rs  error_constructor_tests.rs  grpc_handler_registration_test.rs  mcp_client_server_roundtrip_test.rs  nats_nkey_tests.rs  openapi_integration_test.rs  public_api_integration.rs  rest_client_initialization_debug.rs  rest_client_server_roundtrip_get_test.rs  rest_client_server_roundtrip_options_test.rs  rest_client_server_roundtrip_patch_test.rs  rest_client_server_roundtrip_post_test.rs  rest_client_server_roundtrip_put_test.rs  rest_protocol_extension_integration_test.rs  rest_server_basic_test.rs  rest_server_json_error_tests.rs  rest_server_tls_test.rs  test_smart_cors.rs  test_tls_grpc.rs  test_tls_nats.rs  test_tls_rest.rs  test_tls_unified.rs  test_tls_websocket.rs  transport_config_injection.rs  transport_dual_transport_grpc_tests.rs  (+10 more)
software/tests/certs/: ca-key.pem  ca.pem  ca.srl  client-cert.pem  client-key.pem  server-cert.pem  server-key.pem
software/tests/common/: mod.rs  rest_test_utils.rs  test_constants.rs  websocket_test_utils.rs
software/tools/: Cargo.toml  GENERATOR-FIX.md  README.md
software/tools/src/: cli.rs  lib.rs  main.rs
software/tools/tests/: cli_integration_tests.rs  code_generation_integration_tests.rs  integer_type_selection_tests.rs  integration_schema_tests.rs  meta_validation_tests.rs  mod.rs  rest_protocol_metadata_schema_tests.rs  schema_test_runner.rs  schema_validation_tests.rs  service_config_validation_tests.rs  simple_jsonschema_test.rs  validation_error_handling_tests.rs
(+731 files in other folders)
