[package]
name = "tools"
version = "0.0.1"
edition = "2021"
authors = ["Qollective Contributors"]
description = "Code generation CLI for the Qollective framework"
license = "MIT"
repository = "https://github.com/qollective/qollective"
keywords = ["codegen", "api", "framework", "microservices"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "qollective_tools_lib"
path = "src/lib.rs"

[[bin]]
name = "qollective_tools"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
jsonschema = "0.30"
url = "2.5"
typify = "0.4"
# NOTE: schemars is pinned to 0.8 due to typify dependency compatibility
# typify 0.4 requires schemars 0.8.22, upgrading to schemars 1.0 causes type conflicts
schemars = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.20"
