[package]
name = "nats_internal"
version = "0.1.0"
edition = "2021"
description = "Example: Qollective internal NATS client/server with envelope requests"

[[bin]]
name = "nats_internal"
path = "src/main.rs"

[dependencies]
qollective = { path = "../..", features = ["nats"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
