[workspace]
members = [
    "shared-types",
    "holodeck-desktop/src-tauri",
    "holodeck-character",
    "holodeck-designer",
    "holodeck-safety",
    "holodeck-validator",
    "holodeck-coordinator",
    "holodeck-storybook",
    "holodeck-environment",
]

resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

# Qollective runtime
qollective = { path = "../..", features = ["mcp-client", "mcp-server", "openapi"] }

# MCP and LLM integration
rmcp = "0.7.0"
rmcp-macros = "0.7.0"
rig-core = "0.21"

# Web and networking
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Tauri dependencies
tauri = { version = "2.0", features = [] }
tauri-build = "2.0"

# JSON Schema validation
jsonschema = "0.30"
schemars = "1.0"  # For rmcp compatibility

# Configuration loading
toml = "0.9.0"
dotenv = "0.15.0"
schemars_v08 = { package = "schemars", version = "0.8.22", features = ["derive"] }  # For rig-core compatibility

# 3D math and physics (for environment server)
nalgebra = "0.33"
rapier3d = "0.27"
rand = "0.9"

# Testing utilities
tempfile = "3.8"

[package]
name = "qollective-mcp-websocket-holodeck"
version = "0.1.0"
edition = "2021"
description = "8-component holodeck architecture integration tests"

[dependencies]
shared-types = { path = "shared-types" }
qollective.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
jsonschema.workspace = true
reqwest.workspace = true

# WebSocket support for MCP communication in tests
tokio-tungstenite.workspace = true
futures-util = "0.3"

# MCP protocol support for tests
rmcp.workspace = true

[workspace.package]
version = "0.1.0"
authors = ["Qollective Team"]
edition = "2021"
license = "MIT"
