# ABOUTME: Space exploration demo workspace configuration
# ABOUTME: Manages multiple crates for servers, WASM client, and shared types

[workspace]
members = [
    "crates/space-servers",
    "crates/space-shared",
    "crates/space-wasm-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Qollective Framework"]
description = "Space exploration demonstration of Qollective Framework WASM capabilities"
license = "MIT"

[workspace.dependencies]
# Qollective framework with WASM and OpenAPI support
qollective = { path = "../../", default-features = false, features = ["rest-client", "websocket-client", "mcp-client", "wasm-client", "openapi"] }

# Common dependencies used across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# WASM-specific dependencies
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"
web-sys = { version = "0.3.72", features = [
  "console",
  "Document", 
  "Element",
  "HtmlElement",
  "Window",
  "WebSocket",
  "Response",
  "Request",
] }
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6"