# ABOUTME: MCP server for character AI responses and dialogue generation
# ABOUTME: Generates character-specific responses in authentic TNG character voices and speech patterns

[package]
name = "holodeck-character"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for Star Trek character AI responses and dialogue"

[dependencies]
# Shared types
shared-types = { path = "../shared-types" }

# Core async and serialization
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true

# Qollective runtime for MCP server features
qollective.workspace = true

# MCP server functionality
rmcp.workspace = true
rmcp-macros.workspace = true
schemars.workspace = true

# LLM integration for character dialogue
rig-core.workspace = true

# HTTP client for API calls
reqwest.workspace = true

# JSON Schema validation
jsonschema.workspace = true

# Configuration file parsing
toml.workspace = true
dotenv.workspace = true

# WebSocket support for MCP communication
tokio-tungstenite.workspace = true
futures-util = "0.3"

[dev-dependencies]
tempfile = {version = "3.20.0" }
