# ABOUTME: MCP client coordinator that orchestrates all holodeck MCP servers
# ABOUTME: Central hub for holodeck operations - coordinates designer, validator, environment, safety, character services

[package]
name = "holodeck-coordinator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP client coordinator for holodeck service orchestration"

[dependencies]
# Shared types
shared-types = { path = "../shared-types" }

# Core async and serialization
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true

# Qollective runtime for MCP features
qollective.workspace = true

# MCP server functionality
rmcp.workspace = true
rmcp-macros.workspace = true
schemars.workspace = true

# HTTP client for service communication
reqwest.workspace = true

# WebSocket server for desktop client communication
tokio-tungstenite.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Configuration loading
toml.workspace = true
dotenv.workspace = true

# Random number generation for realistic health simulation
rand.workspace = true