# ABOUTME: MCP server providing holodeck environment status and simulation
# ABOUTME: Generates environmental conditions and effects based on current scene context

[package]
name = "holodeck-environment"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for holodeck environment simulation and status"

[dependencies]
# Shared types
shared-types = { path = "../shared-types" }

# Core async and serialization
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true

# Qollective runtime for MCP server features
qollective.workspace = true

# MCP server functionality
rmcp.workspace = true
rmcp-macros.workspace = true
schemars.workspace = true

# 3D spatial calculations with serde support
nalgebra = { workspace = true, features = ["serde-serialize"] }

# Environmental physics simulation (future integration)
rapier3d.workspace = true

# Random number generation for procedural environments
rand.workspace = true

# LLM integration for environment generation
rig-core.workspace = true

# HTTP client for API calls
reqwest.workspace = true

# JSON Schema validation
jsonschema.workspace = true

# Configuration parsing
toml.workspace = true
dotenv.workspace = true