# ABOUTME: MCP server for holodeck safety monitoring and protocols
# ABOUTME: Provides safety status and emergency protocols based on current scene conditions

[package]
name = "holodeck-safety"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for holodeck safety monitoring and emergency protocols"

[dependencies]
# Shared types
shared-types = { path = "../shared-types" }

# Core async and serialization
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true

# Qollective runtime for MCP server features
qollective.workspace = true

# MCP server functionality
rmcp.workspace = true
rmcp-macros.workspace = true
schemars.workspace = true

# LLM integration for safety assessment
rig-core.workspace = true

# HTTP client for API calls
reqwest.workspace = true

# JSON Schema validation
jsonschema.workspace = true