# ABOUTME: WebSocket/REST server providing story data and history management
# ABOUTME: Delivers current story information and tracks holodeck session progress

[package]
name = "holodeck-storybook"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket/REST server for holodeck story and history management"

[dependencies]
# Shared types
shared-types = { path = "../shared-types" }

# Core async and serialization
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true

# MCP server framework
rmcp.workspace = true
rmcp-macros.workspace = true

# Qollective runtime for envelope handling
qollective.workspace = true

# Web server framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# WebSocket support
tokio-tungstenite.workspace = true

# HTTP client for external services
reqwest.workspace = true

# Configuration management
toml.workspace = true
dotenv.workspace = true

# Schema generation for structured responses
schemars.workspace = true
schemars_v08.workspace = true

[dev-dependencies]
# Testing utilities
tempfile.workspace = true