# ABOUTME: MCP server for story template validation and quality assurance
# ABOUTME: Validates generated stories against JSON schemas and ensures narrative quality

[package]
name = "holodeck-validator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for holodeck story validation and quality assurance"

[dependencies]
# Shared types
shared-types = { path = "../shared-types" }

# Core async and serialization
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true

# Qollective runtime for MCP server features
qollective.workspace = true

# MCP server functionality
rmcp.workspace = true
rmcp-macros.workspace = true
schemars.workspace = true

# JSON Schema validation
jsonschema.workspace = true

# LLM integration for quality assessment
rig-core.workspace = true

# HTTP client for API calls
reqwest.workspace = true

# Configuration management
toml.workspace = true
dotenv.workspace = true

# Futures utilities
futures-util = "0.3"