[package]
name = "shared-types"
version.workspace = true
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
rig-core.workspace = true
schemars.workspace = true
schemars_v08.workspace = true
tokio.workspace = true
