[package]
name = "constraint-enforcer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "constraint-enforcer"
path = "src/main.rs"

[dependencies]
shared-types = { path = "../shared-types" }
qollective = { workspace = true }
rmcp = { workspace = true }
rmcp-macros = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
figment = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
