[package]
name = "desktop-cli"
version = "0.1.0"
edition = "2021"
authors = ["Qollective Team"]
description = "Terminal User Interface (TUI) for TaleTrail Desktop - MCP testing, trail browsing, and NATS monitoring"
license = "MIT"

[[bin]]
name = "taletrail-cli"
path = "src/main.rs"

[lib]
name = "taletrail_cli"
path = "src/lib.rs"

[dependencies]
# TUI Framework
iocraft = "0.7"

# NATS Client
async-nats = "0.37"

# Async Runtime (smol required by Iocraft)
smol = "2"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time and Date
chrono = "0.4"

# Error Handling
anyhow = "1"
thiserror = "1"

# Configuration Management
toml = "0.8"

# Futures and Async Utilities
futures = "0.3"
async-channel = "2"

# Shared Types and Dependencies
shared-types-generated = { path = "../shared-types-generated" }
qollective = { workspace = true }
rmcp = { workspace = true }
uuid = { workspace = true }
walkdir = "2"

# TLS and Authentication
rustls = "0.23"
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
