[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
shared-types = { path = "../shared-types" }
qollective = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
