[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
shared-types = { path = "../shared-types" }
qollective = { workspace = true, features = [
    "rest-server",       # HTTP server capabilities
    "mcp-client",        # MCP client to communicate with orchestrator
    "nats",              # NATS transport layer
    "tenant-extraction", # JWT tenant context extraction
    "config",            # Configuration support
    "tracing"            # Observability (envelope is built-in)
]}
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
figment = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
