[package]
name = "nats-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nats-cli"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared-types = { path = "../shared-types" }
qollective = { workspace = true }
rmcp = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# CLI-specific dependencies
clap = { version = "4.5", features = ["derive", "color", "help", "usage", "error-context"] }
colored = "3.0"

# Additional utilities
walkdir = "2.5"
