[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
shared-types = { path = "../shared-types" }
shared-types-llm = { path = "../shared-types-llm" }
qollective = { workspace = true, features = [
    "mcp-client",  # MCP client to communicate with MCP servers
    "nats",        # NATS transport layer
    "tls",         # TLS support for NATS
    "config",      # Configuration support
    "tracing"      # Observability
]}
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
async-nats = { workspace = true }
dotenvy = { workspace = true }
figment = { workspace = true }
rmcp = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
lazy_static = { workspace = true }
